Progate Course Ruby on Rails 5 - Study 3: Post detail, new post

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,9 @@
         <li>
           <%= link_to("Posts", "/posts/index") %>
         </li>
+        <li>
+          <%= link_to("New post", "/posts/new") %>
+        </li>
       </ul>
     </header>
 
