Progate Course Ruby on Rails 5 - Study 4: Delete post

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,6 +12,7 @@
 
       <div class="post-menus">
         <%= link_to("Edit", "/posts/#{@post.id}/edit") %>
+        <%= link_to("Delete", "/posts/#{@post.id}/destroy", {method:"post"}) %>
       </div>
 
     </div>
