--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,12 @@
         <li>
           <%= link_to("New post", "/posts/new") %>
         </li>
+        <li>
+          <%= link_to("Users", "/users/index") %>
+        </li>
+        <li>
+          <%= link_to("Sign up", "/signup") %>
+        </li>
       </ul>
     </header>
 
