Progate Course Ruby on Rails 5 - Study 8: Login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,37 +11,48 @@
   </head>
 
   <body>
-
     <header>
       <div class="header-logo">
         <%= link_to("TweetApp", "/") %>
       </div>
       <ul class="header-menus">
-        <li>
-          <%= link_to("About", "/about") %>
-        </li>
-        <li>
-          <%= link_to("Posts", "/posts/index") %>
-        </li>
-        <li>
-          <%= link_to("New post", "/posts/new") %>
-        </li>
-        <li>
-          <%= link_to("Users", "/users/index") %>
-        </li>
-        <li>
-          <%= link_to("Sign up", "/signup") %>
-        </li>
+        <% if session[:user_id] %>
+          <li>
+            Your ID is:
+            <%= session[:user_id] %>
+          </li>
+          <li>
+            <%= link_to("Posts", "/posts/index") %>
+          </li>
+          <li>
+            <%= link_to("New post", "/posts/new") %>
+          </li>
+          <li>
+            <%= link_to("Users", "/users/index") %>
+          </li>
+          <li>
+            <%= link_to("Log out", "/logout", {method: :post}) %>
+          </li>
+        <% else %>
+          <li>
+            <%= link_to("About", "/about") %>
+          </li>
+          <li>
+            <%= link_to("Sign up", "/signup") %>
+          </li>
+          <li>
+            <%= link_to("Log in", "/login") %>
+          </li>
+        <% end %>
       </ul>
     </header>
 
-    <% if flash[:notice]  %>
+    <% if flash[:notice] %>
       <div class="flash">
         <%= flash[:notice] %>
       </div>
     <% end %>
-
+    
     <%= yield %>
-
   </body>
 </html>
