Progate Course Ruby on Rails 5 - Study 9: Associating Posts with the User Model

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,12 @@
 <div class="main posts-show">
   <div class="container">
     <div class="posts-show-item">
-    
+
+      <div class="post-user-name">
+        <img src="<%= "/user_images/#{@user.image_name}" %>">
+        <%= link_to(@user.name,"/users/#{@user.id}") %>
+      </div>
+      
       <p>
         <%= @post.content %>
       </p>
@@ -12,9 +17,9 @@
 
       <div class="post-menus">
         <%= link_to("Edit", "/posts/#{@post.id}/edit") %>
-        <%= link_to("Delete", "/posts/#{@post.id}/destroy", {method:"post"}) %>
+        <%= link_to("Delete", "/posts/#{@post.id}/destroy", {method: "post"}) %>
       </div>
-
+      
     </div>
   </div>
 </div>
