--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,25 +1,24 @@
 <div class="main posts-show">
   <div class="container">
     <div class="posts-show-item">
-
       <div class="post-user-name">
         <img src="<%= "/user_images/#{@user.image_name}" %>">
-        <%= link_to(@user.name,"/users/#{@user.id}") %>
+        <%= link_to(@user.name, "/users/#{@user.id}") %>
       </div>
-      
       <p>
         <%= @post.content %>
       </p>
-
       <div class="post-time">
         <%= @post.created_at %>
       </div>
-
-      <div class="post-menus">
-        <%= link_to("Edit", "/posts/#{@post.id}/edit") %>
-        <%= link_to("Delete", "/posts/#{@post.id}/destroy", {method: "post"}) %>
-      </div>
       
+      <% if @post.user_id == @current_user.id %>
+        <div class="post-menus">
+          <%= link_to("Edit", "/posts/#{@post.id}/edit") %>
+          <%= link_to("Delete", "/posts/#{@post.id}/destroy", {method: "post"}) %>
+        </div>
+      <% end %>
+
     </div>
   </div>
 </div>
