--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -10,11 +10,14 @@
     </div>
     
     <ul class="user-tabs">
-      <li class="active"><%= link_to("Posts", "/users/#{@user.id}") %></li>
-      <li><%= link_to("Likes", "/users/#{@user.id}/likes") %></li>
+      <li><%= link_to("Posts", "/users/#{@user.id}") %></li>
+      <li class="active"><%= link_to("Likes", "/users/#{@user.id}/likes") %></li>
     </ul>
     
-    <% @user.posts.each do |post| %>
+    <% @likes.each do |like|%>
+    
+      <% post = Post.find_by(id: like.post_id) %>
+      
       <div class="posts-index-item">
         <div class="post-left">
           <img src="<%= "/user_images/#{post.user.image_name}" %>">
@@ -27,5 +30,6 @@
         </div>
       </div>
     <% end %>
+
   </div>
 </div>
